--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
   <table cellspacing=20>
     <tr>
-      <td><img src="/Users/chumajozi/Downloads/WEB DEVELOPMENT BOOTCAMP/image folder/Chuma-Jozi-modified.png" alt="Chuma jozi image"></td>
+      <td><img src="/image folder/Chuma-Jozi-modified.png" alt="Chuma jozi image"></td>
       <td>
         <h1>Jozi Personal Site</h1>
         <p> <em>Founder and CTO of <strong><a href="https://www.appbrewery.co/">The App brewery</a></strong></em></p>
