update the directory for hobbies and contact page

--- a/index.html
+++ b/index.html
@@ -79,8 +79,8 @@
   <hr>
 
   <ul>
-    <li><a href="/Users/chumajozi/Downloads/WEB DEVELOPMENT BOOTCAMP/HTML-Personal Site/hobbies.html">MY Hobbies</a></li>
-    <li><a href="/Users/chumajozi/Downloads/WEB DEVELOPMENT BOOTCAMP/HTML-Personal Site/Contacts.html">Contact Me</a></li>
+    <li><a href="hobbies.html">MY Hobbies</a></li>
+    <li><a href="Contacts.html">Contact Me</a></li>
   </ul>
 
 </body>
