--- a/index.html
+++ b/index.html
@@ -79,8 +79,8 @@
   <hr>
 
   <ul>
-    <li><a href="hobbies.html">MY Hobbies</a></li>
-    <li><a href="Contacts.html">Contact Me</a></li>
+    <li><a href="/hobbies.html">MY Hobbies</a></li>
+    <li><a href="/Contacts.html">Contact Me</a></li>
   </ul>
 
 </body>
