--- a/index.html
+++ b/index.html
@@ -62,15 +62,19 @@
   <h3>Skills</h3>
   <table cellspacing = "10">
     <tr>
-      <td>Web DEVELOPMENT &#11088;&#11088;&#11088;&#11088;&#11088;</td>
+      <td>Web DEVELOPMENT </td>
+      <td>&#11088;&#11088;&#11088;&#11088;&#11088;</td>
     <tr>
-      <td>ISQTB &#11088;&#11088;&#11088;&#11088;&#11088;&#11088;</td>
+      <td>ISQTB </td>
+      <td> &#11088;&#11088;&#11088;&#11088;&#11088;&#11088;</td>
     </tr>
     <tr>
-      <td>Net Developer &#11088;&#11088;&#11088;&#11088;&#11088;</td>
+      <td>Net Developer</td>
+      <td> &#11088;&#11088;&#11088;&#11088;&#11088;</td>
     </tr>
     <tr>
-      <td>API DEVELOPMENT &#11088;&#11088;&#11088;🤳🏿</td>
+      <td>API DEVELOPMENT </td>
+      <td>&#11088;&#11088;&#11088;🤳🏿</td>
     </tr>
     <tr>
       <td>TOGAF &#11088;&#11088;&#11088;&#11088;&#11088;</td>
