--- a/index.html
+++ b/index.html
@@ -77,7 +77,8 @@
       <td>&#11088;&#11088;&#11088;🤳🏿</td>
     </tr>
     <tr>
-      <td>TOGAF &#11088;&#11088;&#11088;&#11088;&#11088;</td>
+      <td>TOGAF </td> 
+      <td> &#11088;&#11088;&#11088;&#11088;&#11088;</td>
     </tr>
   </table>
   <hr>
